unpackaged/main/default/objects/Parameter__c/Parameter__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store parameter values for apex to be able to access</description>
    <label>Parameter</label>
</CustomObject>