unpackaged/main/default/objects/Parameter__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Store Category of Parameter</description>
    <label>Category</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>