unpackaged/main/default/objects/Parameter__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Provide Comments regarding the paramter</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>